# MetaAIHackathon

./: Dockerfile  README.md  app.py  baseline.py  check_output.py  inference.py  inference_runner.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
env/: environment.py  grader.py  models.py  tasks.py
server/: app.py
