[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaai-customer-support-simulator"
version = "0.1.0"
description = "AI Customer Support Simulator for Meta AI OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "python-dotenv"
]

[tool.setuptools]
packages = ["env"]
