[project]
name = "meta-support-env"
version = "0.1.0"
description = "Meta AI OpenEnv Support Simulator"
requires-python = ">=3.9"
dependencies = [
    "openenv",
    "openenv-core",
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests"
]

[project.scripts]
server = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
