[project]
name = "meta-support-env"
version = "0.1.0"
description = "Meta AI OpenEnv Support Simulator"
dependencies = [
    "openenv>=0.1.13",
    "openenv-core>=0.1.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests"
]

[project.scripts]
server = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["env", "."]
